# autoarch

./: .gitignore  README.md  autoarch.sh  pyproject.toml  run_autoarch.sh
autoarch/: customize.py  install_os.py  loc.py  os.py  user.py
autoarch/files/: .config_gtk-3.0_gtk.css  __init__.py  etc_x11_xorg.conf.d_52-resolution-fix.conf
files/.themes/Adapta-Nokto/metacity-1/: metacity-theme-3.xml
