[tool.poetry]
name = "autoarch"
description = "autoarch"
version = "0.0.1"
authors = ["Pierre-Yves Langlois"]
license = "MIT"
readme = "README.md"

include = ["files/"]

[tool.poetry.dependencies]
python = "^3.7"
plumbum = "*"
click = "*"

[tool.poetry.scripts]
autoarch = "autoarch.customize:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

